--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -13,7 +13,21 @@
 
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; }
+      /*#messages > li:nth-child(odd) { background: #efefef; } */
+      #messages > .s-li {
+	  padding: 0.5rem 1rem;
+	  color: red;
+      }
+      #messages .user-name {
+	  font-weight: bold;
+	  margin-right: 2px;
+	  margin-left: 2px;
+	  color: var(--user-color, black);
+      }
+      #messages > li:hover {
+	  cursor: help;
+	  background-color: rgba(0, 0, 0, 0.05);
+      }
     </style>
     <ul id="messages"></ul>
     <form id="form" action="">
@@ -30,12 +44,36 @@
 	    e.preventDefault();
 	    if (input.value) {
 		socket.emit('chat message', input.value);
-		input.value = '';
 	    }
 	});
 
 	socket.on('chat message', (msg) => {
 	    const item = document.createElement('li');
+	    //date constructor
+	    const date = new Date(msg.timestamp);
+	    const dateStr = date.toLocaleTimeString([], {
+		hour: '2-digit',
+		minute: '2-digit'
+	    });
+	    // nickname constructor and styling
+	    const userName = msg.author.substring(7);
+	    const userColor = msg.author.substring(0,7);
+
+	    // set title for tooltip hover
+	    item.setAttribute('title', `Msg ID: ${msg.id}`);
+
+	    //format and build message
+	    item.innerHTML = `<span style="color:grey; font-size:10px">${dateStr} | </span> <span class="user-name" style="--user-color:${userColor}">${userName}</span>: ${msg.content}`;
+	    //item.textContent = msg.content;
+	    messages.appendChild(item);
+	    window.scrollTo(0, document.body.scrollHeight);
+	    if (input.value === msg.content) {
+		input.value = '';
+	    }
+	});
+	socket.on('toClientMsg', (msg) => {
+	    const item = document.createElement('li');
+	    item.classList.add('s-li');
 	    item.textContent = msg;
 	    messages.appendChild(item);
 	    window.scrollTo(0, document.body.scrollHeight);
