--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Socket.IO chat</title>
+    <title>ratchat</title>
     <style>
       body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
@@ -67,6 +67,7 @@
 	    //item.textContent = msg.content;
 	    messages.appendChild(item);
 	    window.scrollTo(0, document.body.scrollHeight);
+	    // fix side-effect of clearing users typing the message
 	    if (input.value === msg.content) {
 		input.value = '';
 	    }
