--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -18,6 +18,10 @@
 	  padding: 0.5rem 1rem;
 	  color: red;
       }
+	  #messages > .w-li {
+	  padding: 0.5rem 1rem;
+	  color: darkslategrey;
+      }
       #messages .user-name {
 	  font-weight: bold;
 	  margin-right: 2px;
@@ -63,8 +67,9 @@
 	    item.setAttribute('title', `Msg ID: ${msg.id}`);
 
 	    //format and build message
-	    item.innerHTML = `<span style="color:grey; font-size:10px">${dateStr} | </span> <span class="user-name" style="--user-color:${userColor}">${userName}</span>: ${msg.content}`;
-	    //item.textContent = msg.content;
+	    item.innerHTML = `<span style="color:grey; font-size:10px; margin-right:2px">${dateStr}</span> <span class="user-name" style="--user-color:${userColor}">${userName}</span>: ${msg.content}`;
+	    
+		
 	    messages.appendChild(item);
 	    window.scrollTo(0, document.body.scrollHeight);
 	    // fix side-effect of clearing users typing the message
@@ -75,6 +80,13 @@
 	socket.on('toClientMsg', (msg) => {
 	    const item = document.createElement('li');
 	    item.classList.add('s-li');
+	    item.textContent = msg;
+	    messages.appendChild(item);
+	    window.scrollTo(0, document.body.scrollHeight);
+	});
+	socket.on('toClientWelcome', (msg) => {
+	    const item = document.createElement('li');
+	    item.classList.add('w-li');
 	    item.textContent = msg;
 	    messages.appendChild(item);
 	    window.scrollTo(0, document.body.scrollHeight);
