--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -3,7 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>ratchat</title>
-    <style>
+    
+	<style>
       body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
       #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
@@ -12,7 +13,7 @@
       #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
 
       #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
+      #messages > li { padding: 0.25rem 1rem; }
       /*#messages > li:nth-child(odd) { background: #efefef; } */
       #messages > .s-li {
 	  padding: 0.5rem 1rem;
@@ -33,12 +34,17 @@
 	  background-color: rgba(0, 0, 0, 0.05);
       }
     </style>
-    <ul id="messages"></ul>
+
+    <div style="position: absolute; bottom: 3.1rem; left: 1rem; width: 98%;">
+	<ul id="messages"></ul>
+	</div>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="https://cdn.socket.io/4.8.3/socket.io.min.js"></script> 
-    <script>
+   
+	<script src="https://cdn.socket.io/4.8.3/socket.io.min.js"></script> 
+   
+   <script>
 	const socket = io();
 	const form = document.getElementById('form');
 	const input = document.getElementById('input');
