--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -1,98 +1,154 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>ratchat</title>
-    
-	<style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+	<head>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		
+		<title>ratchat</title>
+	
+		<style>
+	
+		body {
+			margin: 0;
+			padding-bottom: 3rem;
+			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+		}
 
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+		#form { 
+			background: rgba(0, 0, 0, 0.15);
+			padding: 0.25rem; position: fixed;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			display: flex;
+			height: 3rem;
+			box-sizing: border-box;
+			backdrop-filter: blur(10px);
+		}
 
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.25rem 1rem; }
-      /*#messages > li:nth-child(odd) { background: #efefef; } */
-      #messages > .s-li {
-	  padding: 0.5rem 1rem;
-	  color: red;
-      }
-	  #messages > .w-li {
-	  padding: 0.5rem 1rem;
-	  color: darkslategrey;
-      }
-      #messages .user-name {
-	  font-weight: bold;
-	  margin-right: 2px;
-	  margin-left: 2px;
-	  color: var(--user-color, black);
-      }
-      #messages > li:hover {
-	  cursor: help;
-	  background-color: rgba(0, 0, 0, 0.05);
-      }
-    </style>
+		#input {
+			border: none;
+			padding: 0 1rem;
+			flex-grow: 1;
+			border-radius: 2rem;
+			margin: 0.25rem;
+		}
 
-    <div style="position: absolute; bottom: 3.1rem; left: 1rem; width: 98%;">
-	<ul id="messages"></ul>
-	</div>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
+		#input:focus {
+			outline: none;
+		}
+
+		#form > button {
+			background: #333;
+			border: none;
+			padding: 0 1rem; 
+			margin: 0.25rem; 
+			border-radius: 3px;
+			outline: none; color: #fff;
+		}
+
+		#messages {
+			list-style-type: none;
+			margin: 0;
+			padding: 0; 
+		}
+
+		#messages > li {
+		padding: 0.25rem 1rem; 
+		}
+
+		#messages > .s-li {
+			padding: 0.5rem 1rem;
+			color: red;
+		}
+
+		#messages > .w-li {
+			padding: 0.5rem 1rem;
+			color: darkslategrey;
+		}
+
+		#messages .user-name {
+			font-weight: bold;
+			margin-right: 2px;
+			margin-left: 2px;
+			color: var(--user-color, black);
+		}
+
+		#messages > li:hover {
+			cursor: pointer;
+			background-color: rgba(0, 0, 0, 0.05);
+		}
+		</style>
+	</head>
+	<body>
+		<div style="position: fixed; bottom: 3.1rem; left: 1rem; width: 100%; max-width:98vw; max-height:95vh; overflow-y: scroll">
+			<ul id="messages"></ul>
+		</div>
+	<form id="form" action="">
+		<input id="input" autocomplete="off" /><button>Send</button>
+	</form>
    
 	<script src="https://cdn.socket.io/4.8.3/socket.io.min.js"></script> 
    
-   <script>
-	const socket = io();
-	const form = document.getElementById('form');
-	const input = document.getElementById('input');
-	const messages = document.getElementById('messages');
-	// helper function for non user messages
-	const systemMessage = (msg, className) => {
-	    const item = document.createElement('li');
-	    item.classList.add(className);
-	    item.textContent = msg;
-	    messages.appendChild(item);
-	    window.scrollTo(0, document.body.scrollHeight);
-	};
+	<script>
+		const socket = io();
+		const form = document.getElementById('form');
+		const input = document.getElementById('input');
+		const messages = document.getElementById('messages');
 
-	form.addEventListener('submit', (e) => {
-	    e.preventDefault();
-	    if (input.value) {
-		socket.emit('chat message', input.value, () => {
-		input.value = '';	
+
+		//Helper function for non user messages
+		const systemMessage = (msg, className) => {
+			const item = document.createElement('li');
+			item.classList.add(className);
+			item.textContent = msg;
+			messages.appendChild(item);
+			window.scrollTo(0, document.body.scrollHeight);
+		};
+
+		form.addEventListener('submit', (e) => {
+		e.preventDefault();
+			if (input.value) {
+				socket.emit('chat message', input.value, () => {
+				input.value = '';	
+				});
+			}
 		});
-	    }
-	});
 
-	socket.on('chat message', (msg) => {
-	    const item = document.createElement('li');
-	    //date constructor
-	    const date = new Date(msg.timestamp);
-	    const dateStr = date.toLocaleTimeString([], {
-		hour: '2-digit',
-		minute: '2-digit'
-	    });
-	    // nickname constructor and styling
-	    const userName = msg.author.substring(7);
-	    const userColor = msg.author.substring(0,7);
-	    const timeSpan = `<span style="color:grey; font-size:10px; margin-right:2px">${dateStr}</span>`
-	    const nameSpan = `<span class="user-name" style="--user-color:${userColor}">${userName}</span>: `
-	    const contentSpan = document.createElement('span')
-	    // set title for tooltip hover
-	    item.setAttribute('title', `Msg ID: ${msg.id}`);
-	    //format and build message
-	    item.innerHTML = timeSpan + nameSpan
-	    contentSpan.textContent = msg.content;
-	    item.appendChild(contentSpan);
-	    messages.appendChild(item);
-	    window.scrollTo(0, document.body.scrollHeight);
-	});
+		//Message recieved
+		socket.on('chat message', (msg) => {
+			const item = document.createElement('li');
+		
+			//Date constructor
+			const date = new Date(msg.timestamp);
+			const dateStr = date.toLocaleTimeString([], {
+			hour: '2-digit',
+			minute: '2-digit'
+			});
 
-	socket.on('toClientMsg', (msg) => systemMessage(msg, 's-li'));
-	socket.on('toClientWelcome', (msg) => systemMessage(msg, 'w-li'));
-    </script>
-  </body>
+			//Nickname constructor and styling
+			const userName = msg.author.substring(7);
+			const userColor = msg.author.substring(0,7);
+			const timeSpan = `<span style="color:grey; font-size:10px; margin-right:2px">${dateStr}</span>`
+			const nameSpan = `<span class="user-name" style="--user-color:${userColor}">${userName}</span>: `
+			const contentSpan = document.createElement('span')
+
+			//Set title for tooltip hover
+			item.setAttribute('title', `Msg ID: ${msg.id}`);
+
+			//Format and build message
+			item.innerHTML = timeSpan + nameSpan
+			contentSpan.textContent = msg.content;
+			item.appendChild(contentSpan);
+			messages.appendChild(item);
+			window.scrollTo(0, document.body.scrollHeight);
+		});
+
+		//Server Error Message
+		socket.on('toClientMsg', (msg) => systemMessage(msg, 's-li'));
+
+		//Server Welcome Message
+		socket.on('toClientWelcome', (msg) => systemMessage(msg, 'w-li'));
+
+	</script>
+	</body>
 </html>
