command framework v2 switch statements

--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -104,7 +104,13 @@
 			messages.appendChild(item);
 			window.scrollTo(0, document.body.scrollHeight);
 		};
-
+		
+		//GUID check
+		const ratGUID = localStorage.getItem("ratGUID")	
+		if(ratGUID == null){
+			console.log('no GUID')
+		}
+	
 		//Clears input field after submission
 		form.addEventListener('submit', (e) => {
 		e.preventDefault();
