--- a/server/www/ratchat.html
+++ b/server/www/ratchat.html
@@ -13,18 +13,18 @@
 			overflow: hidden;
 		}
 
-		#form{
-		display: flex;
-		gap: 0.25rem;
-		padding-top: 0.25rem;
-		}
-
 		.window-body {
     		display: flex;
 			flex-direction: column;
 			height: calc(100vh - 2rem);
 			margin: 0 !important;
 			padding: 0.2rem;
+		}
+
+		#form{
+			display: flex;
+			gap: 0.25rem;
+			padding-top: 0.25rem;
 		}
 
 		#input {
@@ -38,6 +38,53 @@
 		
 		#input:focus {
 			outline: none;
+		}
+
+		.user-sidebar {
+			width: 10%;
+			min-width: 10rem;
+			background: white;
+			box-shadow: inset -0.0625rem -0.0625rem #fff, 
+						inset 0.0625rem 0.0625rem #0a0a0a, 
+						inset -0.125rem -0.125rem #dfdfdf, 
+						inset 0.125rem 0.125rem #808080;
+			padding: 0.3125rem;
+			margin-top: 0.25rem;
+			margin-bottom: 0.25rem;			
+			overflow-y: auto;
+			flex-shrink: 0;
+		}
+
+		#user-list {
+			list-style: none;
+			padding: 0;
+			margin: 0.25rem;
+			font-size: large
+		}
+
+		.user-status {
+			font-size: larger;
+			color: #444;
+			margin-left: 0.3125rem;
+		}
+
+		.status-orb {
+			display: inline-block;
+			width: 0.7rem;
+			height: 0.7rem;
+			border-radius: 50%;
+			margin-right: 0.375rem;
+			border: 0.0625rem solid rgba(0,0,0,0.2);
+		}
+
+		.orb-online {
+			background: radial-gradient(circle at 0.1875rem 0.1875rem, #52ff52, #008000);
+			box-shadow: 0.0625rem 0.0625rem 0.0625rem rgba(0,0,0,0.3);
+		}
+
+		.orb-afk {
+			background: radial-gradient(circle at 0.1875rem 0.1875rem, #ffb84d, #ff8c00);
+    		box-shadow: 0.0625rem 0.0625rem 0.0625rem rgba(0,0,0,0.3);
 		}
 
 		#messages-container {
@@ -54,31 +101,7 @@
 			display: flex;
 			flex-direction: column;
 		}
-		.user-sidebar {
-			width: 10%;
-			min-width: 10rem;
-			background: white;
-			box-shadow: inset -0.0625rem -0.0625rem #fff, 
-						inset 0.0625rem 0.0625rem #0a0a0a, 
-						inset -0.125rem -0.125rem #dfdfdf, 
-						inset 0.125rem 0.125rem #808080;
-			padding: 0.3125rem;
-			margin-top: 0.25rem;
-			margin-bottom: 0.25rem;			
-			overflow-y: auto;
-			flex-shrink: 0;
-		}
-		#user-list {
-			list-style: none;
-			padding: 0;
-			margin: 0.25rem;
-			font-size: large
-		}
-		.user-status {
-			font-size: larger;
-			color: #444;
-			margin-left: 0.3125rem;
-		}
+
 		#messages {
 			list-style-type: none;
 			margin: 0;
@@ -180,6 +203,7 @@
 		form.addEventListener('submit', (e) => {
 			e.preventDefault();
 			
+			//null after trim return
 			const val = input.value.trim()
 			if (!val) return;
 
@@ -194,12 +218,13 @@
 				input.value = '';
 				return;
 			}
+
+			//Clear command
 			if(val.startsWith('/clear') && val.length === 6 || val.startsWith('/clr') && val.length === 4){
 				messages.replaceChildren();
 				input.value = '';
 				return;
 			}
-
 
 			//Send message
 			socket.emit('chat message', val, () => {
@@ -213,7 +238,7 @@
 		    localStorage.setItem('ratGUID', identity.guid);
 		});
 
-		//User listing events
+		//User list events
 		socket.on('userlist', (uList) => {
 			const userListElement = document.getElementById('user-list');
 			userListElement.innerHTML = ''; // Clear current list
@@ -224,15 +249,16 @@
 				
 				const userColor = user.nick.substring(0, 7);
 				const userName = user.nick.substring(7);
+				const orb = user.isAfk ? 'orb-afk' : 'orb-online';
 				const statusText = user.status ? `<div style="font-size:small; color: #444; margin-left: 5px;">${user.status}</div>` : '';
 
 				li.innerHTML = `
-					<span style="color: ${userColor}; font-weight: bold;">${userName}</span>
+					<span class="status-orb ${orb}"></span><span style="color: ${userColor}; font-weight: bold;">${userName}</span>
 					${statusText}
 				`;
 				userListElement.appendChild(li);
 					});
-				});
+		});
 
 		//Message recieved
 		socket.on('chat message', (msg) => {
